Fix text wrapping.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -117,3 +117,7 @@
     margin-bottom: 8px;
   }
 }
+
+.description {
+  white-space: pre-wrap;
+}
