--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -17,7 +17,6 @@ $font-stack-monospace: SFMono-Regular, Consolas, 'Liberation Mono', Menlo,
   font-family: $font-stack-sans-serif;
   -webkit-font-smoothing: antialiased;
   @include animate-slow(color);
-  white-space: pre-wrap;
 
   /**
    * Variants
